Changed header formatting so there are no alignment issues

--- a/vanhouse/src/styles/header.css
+++ b/vanhouse/src/styles/header.css
@@ -2,24 +2,26 @@
     text-align: center;
     color: #2b58ab;
     display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.top-line-flexbox {
-    display: flex;
-    justify-content: flex-end;
-}
+/*.top-line-flexbox {*/
+/*    display: flex;*/
+/*    justify-content: space-evenly;*/
+/*}*/
 
 .title-and-logo-flexbox {
     display: flex;
-    justify-content: center;
-    /*text-align: center;*/
+    /*justify-content: flex-start;*/
     align-items: center;
-    flex-basis: 10%;
-    min-width: 89%;
-    flex-direction: row;
+    /*flex-basis: 10%;*/
+    min-width: 25%;
+    /*flex-direction: row;*/
     position: relative;
+    padding: 5px;
 }
 
 .App-logo {
@@ -35,9 +37,39 @@
     font-weight: 700;
 }
 
-.login-logout-button-div {
-    float: right;
+.header-buttons {
+    display: flex;
+    justify-content: space-evenly;
+    /*margin: 0px;*/
+    align-items: center;
+    padding-right: 10px;
+}
+
+.home-button {
+    /*margin-top: 10px;*/
+    /*margin-right: 10px;*/
+    /*align-items: center;*/
+    /*float: right;*/
+    /*flex-basis: 10%;*/
+    padding: 8px;
+}
+
+.welcome-user-div {
+    /*float: right;*/
+    /*flex-basis: 10%;*/
     padding: 10px;
+    align-items: center;
+    /*border: 10px;*/
+}
+
+/*.login-logout-button-div {*/
+/*    float: right;*/
+/*    !*padding: 10px;*!*/
+/*}*/
+
+.login-logout-button {
+    display: flex;
+    align-items: center;
 }
 
 .login-logout-button:hover {
@@ -49,26 +81,21 @@
     color: tomato;
 }
 
-.welcome-user-div {
-    float: right;
-    flex-basis: 10%;
-    padding: 12px;
-}
+/*.subtitle-flexbox {*/
+/*    !*display: flex;*!*/
+/*    justify-content: flex-start;*/
+/*    !*text-align: center;*!*/
+/*    align-items: center;*/
+/*    !*flex-direction: row;*!*/
+/*}*/
 
-.subtitle-flexbox {
-    display: flex;
-    justify-content: flex-end;
-    text-align: center;
-    align-items: center;
-    flex-direction: row;
-}
+/*.subtitle {*/
+/*    !*flex-basis: 10%;*!*/
+/*    !*min-width: 80%;*!*/
+/*    font-family: merriweather, serif;*/
+/*}*/
 
-.subtitle {
-    flex-basis: 10%;
-    min-width: 80%;
-}
-
-.space {
-    flex-basis: 10%;
-    min-width: 10%;
-}
+/*.space {*/
+/*    flex-basis: 10%;*/
+/*    min-width: 10%;*/
+/*}*/
